# ChangeLog for dev-perl/IO-Tee
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/IO-Tee/ChangeLog,v 1.15 2012/06/24 13:00:22 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -IO-Tee-0.64.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> IO-Tee-0.640.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*IO-Tee-0.640.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +IO-Tee-0.640.0.ebuild:
  Change version scheme

  04 Feb 2010; Torsten Veller <tove@gentoo.org> IO-Tee-0.64.ebuild:
  Fix LICENSE: same terms as perl (#301969). Maintenance

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org> IO-Tee-0.64.ebuild:
  Ebuild maintenance

  17 Nov 2006; nixnut <nixnut@gentoo.org> IO-Tee-0.64.ebuild:
  Stable on ppc wrt bug 157957

  17 Aug 2006; Michael Cummings <mcummings@gentoo.org> IO-Tee-0.64.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org> IO-Tee-0.64.ebuild:
  Adding perl dep; fixed DEPEND

  29 Jul 2006; Michael Cummings <mcummings@gentoo.org> IO-Tee-0.64.ebuild:
  Keywording ~amd64

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> IO-Tee-0.64.ebuild:
  Mark 0.64 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> IO-Tee-0.64.ebuild:
  Mark 0.64 ~ia64

  13 Jan 2006; Michael Cummings <mcummings@gentoo.org> IO-Tee-0.64.ebuild:
  marking stable sparc x86

  24 Jul 2005; David Holm <dholm@gentoo.org> IO-Tee-0.64.ebuild:
  Added to ~ppc.

*IO-Tee-0.64 (24 Jul 2005)

  24 Jul 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +IO-Tee-0.64.ebuild:
  Dep for DBI::Shell